Adding support for different origins (domains etc)

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
-REACT_APP_API_URI = http://localhost:5000/
+# Project routes
+ROUTER_PORT = 6001
+BACKEND_PORT = 6002
+FRONTEND_PORT = 6003
 
-MONGO_URI = helo
+# For React
+PORT = 6003
+
+MONGO_URI = MongoDB URI
