Changing environmental variables

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
-PORT = 6001
+# In production mode, the port of the project
+# In development mode, the port of React app
+PORT = 5000
 
-MONGO_URI = MongoDB URI
+# For development mode, the backend port
+DEV_BACKEND_PORT = 5001
+
+# URI to MongoDB database
+MONGO_URI = 
