--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Node environment : production, development
+NODE_ENV = 
+
 # In production mode, the port of the project
 # In development mode, the port of React app
 PORT = 5000
