imported library that was not added

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"express": "^4.17.1",
 		"express-async-handler": "^1.2.0",
 		"http-proxy-middleware": "^2.0.1",
+		"memory-cache": "^0.2.0",
 		"mongoose": "^6.0.11",
 		"morgan": "^1.10.0",
 		"node-fetch": "^3.1.0",
