Change all icons from <img/> to <svg>

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,5 +20,5 @@
 	"start_url": "/",
 	"background_color": "#121212",
 	"display": "standalone",
-	"theme_color": "#121212"
+	"theme_color": "#2596be"
 }
