--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 /node_modules
+/backend/node_modules
+/client/node_modules
 /.pnp
 .pnp.js
 
@@ -13,7 +15,7 @@
 
 # misc
 .DS_Store
-.env
+*.env
 .env.local
 .env.development.local
 .env.test.local
