changing theme-color to #121212

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,5 +3,5 @@
 	"start_url": "/",
 	"background_color": "#121212",
 	"display": "standalone",
-	"theme_color": "#2596be"
+	"theme_color": "#121212"
 }
