--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,5 +3,6 @@
 	"start_url": "/",
 	"background_color": "#121212",
 	"display": "standalone",
-	"theme_color": "#121212"
+	"theme_color": "#121212",
+	"orientation": "portrait"
 }
