--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
 	"license": "MIT",
 	"type": "module",
 	"dependencies": {
+		"chalk": "^5.0.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
