--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/backend/node_modules
-/client/node_modules
+/**/*/node_modules
 /.pnp
 .pnp.js
 
@@ -11,7 +9,6 @@
 /coverage
 
 # production
-/build
 /client/build
 
 # misc
