--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
 	"files.exclude": {
 		"**/.vscode": true,
 		"**/node_modules": true
-	}
+	},
+	"editor.suggest.snippetsPreventQuickSuggestions": false
 }
