--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,10 @@
 
 # production
 /client/build
+/client/dist
 
 # misc
 .DS_Store
-*.env
 .env.local
 .env.development.local
 .env.test.local
@@ -22,9 +22,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-*.bat
-/backend/controllers/test.js
-/client/public/old_manifest.json
-
-git_webhook.js
