--- a/client/package.json
+++ b/client/package.json
@@ -1,29 +1,27 @@
 {
 	"name": "manga-reader-client",
 	"version": "0.1.0",
+	"type": "module",
 	"dependencies": {
-		"@testing-library/jest-dom": "^5.14.1",
-		"@testing-library/react": "^13.0.0",
-		"@testing-library/user-event": "^13.2.1",
+		"vite": "2.7.0",
+		"@vitejs/plugin-react": "1.1.1",
 		"memory-cache": "^0.2.0",
 		"nprogress": "^0.2.0",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"react-router-dom": "^6.3.0",
-		"react-scripts": "5.0.1",
 		"swr": "^1.3.0",
 		"web-vitals": "^2.1.0"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"dev": "vite serve",
+		"start": "vite serve",
+		"preview": "vite preview",
+		"build": "vite build"
 	},
 	"eslintConfig": {
 		"extends": [
-			"react-app",
-			"react-app/jest"
+			"react-app"
 		]
 	},
 	"browserslist": {
