Library layout change

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,13 @@
 	"license": "MIT",
 	"type": "module",
 	"dependencies": {
+		"bcrypt": "^5.1.0",
 		"chalk": "^5.0.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"express-async-handler": "^1.2.0",
+		"jsonwebtoken": "^9.0.0",
 		"memory-cache": "^0.2.0",
 		"mongoose": "^6.3.0",
 		"morgan": "^1.10.0",
@@ -21,5 +23,8 @@
 	"scripts": {
 		"start": "node server.js",
 		"dev": "nodemon server.js"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.20"
 	}
 }
