--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,13 @@
 	"version": "0.1.0",
 	"type": "module",
 	"dependencies": {
-		"@vitejs/plugin-react": "1.1.1",
-		"memory-cache": "^0.2.0",
 		"next": "^13.1.6",
-		"nprogress": "^0.2.0",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
+		"web-vitals": "^2.1.0",
 		"swr": "^1.3.0",
-		"vite": "2.7.0",
-		"web-vitals": "^2.1.0"
+		"memory-cache": "^0.2.0",
+		"nprogress": "^0.2.0"
 	},
 	"scripts": {
 		"dev": "next dev",
@@ -36,5 +34,5 @@
 			"last 1 safari version"
 		]
 	},
-	"proxy": "http://192.168.0.2:5001/"
+	"proxy": "http://localhost:5001/"
 }
