--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,13 @@
 	"version": "0.1.0",
 	"type": "module",
 	"dependencies": {
+		"memory-cache": "^0.2.0",
 		"next": "^13.1.6",
+		"nprogress": "^0.2.0",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
-		"web-vitals": "^2.1.0",
 		"swr": "^1.3.0",
-		"memory-cache": "^0.2.0",
-		"nprogress": "^0.2.0"
+		"web-vitals": "^2.1.0"
 	},
 	"scripts": {
 		"dev": "next dev",
