--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,14 @@
 		"nprogress": "^0.2.0",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
+		"sharp": "^0.31.3",
 		"swr": "^1.3.0",
 		"web-vitals": "^2.1.0"
 	},
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next serve",
+		"start": "next start",
 		"lint": "next lint"
 	},
 	"eslintConfig": {
