--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,8 +1,17 @@
 {
 	"compilerOptions": {
+		"module": "esnext",
+		"moduleResolution": "nodenext",
+		"target": "ES2022",
+		"sourceMap": true,
 		"outDir": "./dist",
 		"allowJs": true,
-		"target": "es2022"
+		"allowSyntheticDefaultImports": true,
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true
 	},
-	"include": ["./src/**/*"]
+	"include": ["./src/**/*"],
+	"ts-node": {
+		"esm": true
+	}
 }
