--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
 		"nprogress": "^0.2.0",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
+		"react-hook-form": "^7.43.8",
 		"sharp": "^0.31.3",
 		"swr": "^1.3.0",
 		"web-vitals": "^2.1.0"
