--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -35,5 +35,5 @@
 		"strictNullChecks": true
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules", ".next"]
 }
