--- a/new-client/tsconfig.json
+++ b/new-client/tsconfig.json
@@ -19,6 +19,9 @@
       }
     ],
     "paths": {
+      "@/components/*": ["./src/components/*"],
+      "@/public/*": ["./public/*"],
+      "@/types/*": ["./types/*"],
       "@/*": ["./src/*"]
     }
   },
